首页搜索框的样式

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,3 @@
-<view class="new">
-<view class="item">项目</view>
-<view class="item">文件</view>
-<view class="item">编辑</view>
-<view class="item">工具</view>
-
-<view class="item">界面</view>
+<view class="top">
+<view class="search">搜索</view>
 </view>
