--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,5 @@
 /**app.wxss**/
+@import"assets/styles/iconfont";
 .container {
   height: 100%;
   display: flex;
@@ -8,8 +9,17 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
-page,view,text,swiper-item,image,navigator{
+/* page,view,text,swiper-item,navigator{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+} */
+page,view,text,image,navigator {
+  margin: 0rpx;
+  padding:0rpx;
+  box-sizing: border-box;
+}
+image{
+  width: 100%;
+  height: 100%;
 }
