--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -1,2 +1,10 @@
-<!--pages/category/index.wxml-->
-<text>pages/category/index.wxml</text>
+<view class="classify">
+
+  <mySearchInput/>
+  <view class="page-section-spacing">
+    <scroll-view scroll-y="true" style="height: 1000rpx;" >
+      <view id="demo1" class="scroll-view-item demo-text-1" wx:for='{{list}}' wx:key='cat_id'>{{item.cat_name}}</view>
+      
+    </scroll-view>
+  </view>
+</view>
