--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -27,22 +27,23 @@
             flex-wrap: wrap;
             margin: 10rpx 0rpx;
 
-
-
             view:nth-child(1) {
-                height: 386rpx;
+                image {
+                    height: 386rpx;
+                }
             }
-
+            view:nth-child(4) {
+                margin-left: 0;
+                padding-left: 263rpx;
+            }
             view {
                 height: 188rpx;
                 margin-left: 15rpx;
                 margin-bottom: 10rpx;
-
                 navigator {
                     display: block;
                     width: 100%;
                     height: 100%;
-
                 }
             }
         }
